[package]
name = "next_api_reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rust_search = "2.1.0"
swc_common = { version = "0.32.2", features = ["tty-emitter"] }
swc_core = "0.83.41"
swc_ecma_ast = {version = "0.109.2"}
swc_ecma_parser = "0.140.1"
swc_ecma_visit = "0.95.2"
